# rangers_royale

./: .gitignore  Cargo.toml
.run/: Run Dynamic.run.xml  Run.run.xml
assets/paid/spritesheets/: setup.txt
prototypes/RangersRoyaleProto1/: 2DCustomizableCharacters.CharacterEditor.Editor.csproj  2DCustomizableCharacters.CharacterEditor.csproj  2DCustomizableCharacters.Editor.csproj  2DCustomizableCharacters.csproj  ColorPicker.csproj  Core.csproj
prototypes/RangersRoyaleProto1/ProjectSettings/: EditorBuildSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset  TagManager.asset
prototypes/RangersRoyaleProto1/UserSettings/: EditorUserSettings.asset
src/: ecs.rs  game.rs  game_plugin.rs  main.rs  registry.rs  utils.rs
src/ecs/: battle.rs  camera.rs  common.rs  components.rs  resources.rs  scenes.rs  systems.rs
src/ecs/battle/: characters.rs  world.rs
src/ecs/common/: animation.rs  moving.rs  player_input.rs  spritesheet_animations.rs
src/ecs/components/: characters.rs  deck.rs
src/ecs/systems/: characters.rs  player.rs  projectiles.rs  ui.rs
src/game/: battle.rs  common.rs  game_mode.rs  input.rs  main_menu.rs  players.rs  registry.rs  scenes.rs  tournament.rs  utils.rs
src/game/battle/: characters.rs  commands.rs  encounter.rs  pathfinder.rs  value_objects.rs  world.rs
src/game/common/: animation.rs  camera.rs  cursor_collider.rs  ellipse_collider.rs  game_cursor.rs  gizmos_manager.rs  layer2d.rs  moving.rs  obstacle.rs  player_input.rs  rect_collider.rs  (+1 more)
src/registry/: character_animations_paths.rs
src/x_old/: systems.rs
(+377 files in other folders)
