[package]
name = "rangers_royale"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy="0.11.3"
bevy_ecs_tilemap = "0.11.1"
derive-getters = "0.3.0"
once_cell = "1.18.0"
bevy-inspector-egui = "0.19.0"
serde = { version = "1.0.164", features = ["derive"] }
rand = "0.8.5"